[package]
name = "pluggable-transports"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.125"
async-std = {version = "1.11.0", features = ["attributes"]}
async-trait = "0.1.53"
futures = "0.3.21"
futures-rustls = {version = "0.22.1", features = ["dangerous_configuration"]}
rustls-pemfile = "0.3.0"
rcgen = {version = "0.9.2", features = ["pem"]}
ed25519-compact = {version = "1.0.11", features = ["pem"]}
anyhow = "1.0.56"
socket2 = "0.4.4"
url = "2.2.2"
fast-socks5 = {git = "https://github.com/ghassmo/fast-socks5"}
